# ai-foundry-databricks-tool

./: .gitignore  README.md
docs/: API_COVERAGE.md  AUTHENTICATION.md  EXAMPLES.md  PREREQUISITES.md  QUICKSTART.md  SECURITY.md  TROUBLESHOOTING.md
src/: azure_databricks_openapi_spec.json  create_databricks_agent_with_managed_identity.py  create_databricks_agent_with_pat.py  pyproject.toml
